[Fix] Mixed Brand Arts page, hidde scrollbar & animate iconic packaging img

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,11 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  
 }
-
+.overflow-hidden-scroll::-webkit-scrollbar {
+  display: none; /* Chrome, Safari y Edge */
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
